added lazy loading

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -59,12 +59,15 @@
             </div>
             <section class="discoverCard imageBar">
                 <h2 hidden>Beautiful Photos of Naples Utah</h2>
-                <img src="./images/placeholder.webp" alt="Placeholderimage">
-                <img src="./images/placeholder.webp" alt="Placeholderimage">
-                <img src="./images/placeholder.webp" alt="Placeholderimage">
-                <img src="./images/placeholder.webp" alt="Placeholderimage">
-                <img src="./images/placeholder.webp" alt="Placeholderimage">
-                <img src="./images/placeholder.webp" alt="Placeholderimage">
+                <img src="./images/placeholder.webp" alt="Placeholderimage" >
+                <img src="./images/placeholder.webp" alt="Placeholderimage" >
+                <img src="./images/placeholder.webp" alt="Placeholderimage" >
+                <img src="./images/placeholder.webp" alt="Placeholderimage" loading="lazy">
+                <img src="./images/placeholder.webp" alt="Placeholderimage" loading="lazy">
+                <img src="./images/placeholder.webp" alt="Placeholderimage" loading="lazy">
+                <img src="./images/placeholder.webp" alt="Placeholderimage" loading="lazy">
+                <img src="./images/placeholder.webp" alt="Placeholderimage" loading="lazy">
+                <img src="./images/placeholder.webp" alt="Placeholderimage" loading="lazy">
             </section>
         </div>
     </main>
