--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -51,7 +51,7 @@
                 <section class="discoverCard sideBarItem" id="sideBarItem2">
                     <h2>Upcoming Event</h2>
                     <figure>
-                        <img id="eventImage" src="./images/Alive-After-Five-FB-1251x464-2024.png" alt="Alive After 5 Event poster">
+                        <img id="eventImage" src="./images/Alive-After-Five-FB-1251x464-2024.webp" alt="Alive After 5 Event poster">
                         <figcaption>Alive After 5: Idol Contest July 18th @ 6:30 pm at the Uintah Libray Park</figcaption>
                     </figure>
                 </section>
@@ -59,15 +59,15 @@
             </div>
             <section class="discoverCard imageBar">
                 <h2 hidden>Beautiful Photos of Naples Utah</h2>
-                <img src="./images/placeholder.webp" alt="Placeholderimage" >
-                <img src="./images/placeholder.webp" alt="Placeholderimage" >
-                <img src="./images/placeholder.webp" alt="Placeholderimage" >
-                <img src="./images/placeholder.webp" alt="Placeholderimage" loading="lazy">
-                <img src="./images/placeholder.webp" alt="Placeholderimage" loading="lazy">
-                <img src="./images/placeholder.webp" alt="Placeholderimage" loading="lazy">
-                <img src="./images/placeholder.webp" alt="Placeholderimage" loading="lazy">
-                <img src="./images/placeholder.webp" alt="Placeholderimage" loading="lazy">
-                <img src="./images/placeholder.webp" alt="Placeholderimage" loading="lazy">
+                <img src="./images/naples_discover_1.webp" alt="Desert near Naples Utah" >
+                <img src="./images/naples_discover_2.webp" alt="Hike near Naples Utah" >
+                <img src="./images/naples_discover_3.webp" alt="Farm in Naples Utah" >
+                <img src="./images/naples_discover_4.webp" alt="City of Naples Welcome Sign" loading="lazy">
+                <img src="./images/naples_discover_5.webp" alt="Uintah Recreation Center that serves the Naples Utah area" loading="lazy">
+                <img src="./images/naples_discover_6.webp" alt="Moonshine Arch, a beginner hike near Naples Utah" loading="lazy">
+                <img src="./images/naples_discover_7.webp" alt="Vernal Temple of the Church of Jesus Christ of Latter-day Saints" loading="lazy">
+                <img src="./images/naples_discover_8.webp" alt="Reservoir with mountains in background" loading="lazy">
+                <img src="./images/naples_discover_9.webp" alt="Steinaker state park Reservoir" loading="lazy">
             </section>
         </div>
     </main>
