added more lazy loading

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -59,9 +59,9 @@
             </div>
             <section class="discoverCard imageBar">
                 <h2 hidden>Beautiful Photos of Naples Utah</h2>
-                <img src="./images/naples_discover_1.webp" alt="Desert near Naples Utah" >
-                <img src="./images/naples_discover_2.webp" alt="Hike near Naples Utah" >
-                <img src="./images/naples_discover_3.webp" alt="Farm in Naples Utah" >
+                <img src="./images/naples_discover_1.webp" alt="Desert near Naples Utah" loading="lazy">
+                <img src="./images/naples_discover_2.webp" alt="Hike near Naples Utah" loading="lazy">
+                <img src="./images/naples_discover_3.webp" alt="Farm in Naples Utah" loading="lazy">
                 <img src="./images/naples_discover_4.webp" alt="City of Naples Welcome Sign" loading="lazy">
                 <img src="./images/naples_discover_5.webp" alt="Uintah Recreation Center that serves the Naples Utah area" loading="lazy">
                 <img src="./images/naples_discover_6.webp" alt="Moonshine Arch, a beginner hike near Naples Utah" loading="lazy">
