--- a/sourdough/recipes.html
+++ b/sourdough/recipes.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Beginners' Sourdough Guide">
     <meta property="og:description" content="Beginners' Sourdough Guide recipe page for the WDD 231.">
     <meta property="og:url" content="https://johnnyasan.github.io/wdd231/sourdough/recipes">
-    <script src="./scripts/recipes.js" defer></script>
+    <script src="./scripts/recipes.js" type="module" defer></script>
     <link rel="stylesheet" href="./styles/recipes.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="icon" href="./images/favicon.ico">
@@ -21,7 +21,12 @@
     <div id="header"></div>
     <main>
 
-        <div id="recipesList">
+        <div id="recipesGrid">
+            <dialog id="recipeDetailsModal">
+                <div id="dialogDiv">
+                   
+                </div>
+            </dialog>
 
         </div>
     </main>
