styled the recipes page

--- a/sourdough/recipes.html
+++ b/sourdough/recipes.html
@@ -20,13 +20,11 @@
 <body>
     <div id="header"></div>
     <main>
-
+        <dialog id="recipeDetailsModal">
+            <div id="dialogDiv"></div>
+        </dialog>
         <div id="recipesGrid">
-            <dialog id="recipeDetailsModal">
-                <div id="dialogDiv">
-                   
-                </div>
-            </dialog>
+            
 
         </div>
     </main>
