finished the site

--- a/sourdough/recipes.html
+++ b/sourdough/recipes.html
@@ -12,7 +12,6 @@
     <meta property="og:title" content="Beginners' Sourdough Guide">
     <meta property="og:description" content="Beginners' Sourdough Guide recipe page for the WDD 231.">
     <meta property="og:url" content="https://johnnyasan.github.io/wdd231/sourdough/recipes">
-    <script src="./scripts/recipes.js" type="module" defer></script>
     <link rel="stylesheet" href="./styles/recipes.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="icon" href="./images/favicon.ico">
@@ -20,6 +19,7 @@
 <body>
     <div id="header"></div>
     <main>
+        <h2 id="dynamicText">Welcome to the recipes page. This is where beginners become pros!</h2>
         <dialog id="recipeDetailsModal">
             <div id="dialogDiv"></div>
         </dialog>
@@ -29,5 +29,6 @@
         </div>
     </main>
     <footer id="footer"></footer>
+    <script src="./scripts/recipes.js" type="module"></script>
 </body>
 </html>
