--- a/sourdough/index.html
+++ b/sourdough/index.html
@@ -84,6 +84,24 @@
                     <li>8 grams - Salt</li>
                     <li>300 milliliters - water</li>
                 </ul>
+                <ol>
+                    <li>Mix 300 ml of water with 380 grams of bread flour and 20 gram of rye flour.</li>
+                    <li>The dough should be shaggy and sticky.</li>
+                    <li>Cover and let sit for 30 minutes.</li>
+                    <li>Add 8 grams of salt, 1 tsp of water and squish it all together.</li>
+                    <li>Stretch edges and pull them toward the center.</li>
+                    <li>Flip it over and leave it to ferment for 6 to 8 hours.</li>
+                    <li>Place dough on floured surface and stretch edges and pull them to middle again.</li>
+                    <li>Fold the dough in half and then gently shape the bottom into a ball.</li>
+                    <li>Place smooth side down in a floured banneton basket.</li>
+                    <li>Leave to proof for 2 more hours.</li>
+                    <li>Preheat oven to 450 degrees fahrenheit with the dutch oven inside.</li>
+                    <li>Place dough on parchment paper and using your lame, score the dough.</li>
+                    <li>Lower parchment paper and dough carefully into dutch oven.</li>
+                    <li>Sprinkle some water onto the dough or put an icecube in the dutch oven.</li>
+                    <li>Bake for 30 minutes covered and then 15 minutes uncovered.</li>
+                    <li>That's it! you have beautiful fresh sourdough!</li>
+                </ol>
             </section>
             <section class="guideBox" id="bonusInfo">
                 <h2>Levain vs. Sourdough Starter</h2>
